--- a/src/main/resources/css/Button.css
+++ b/src/main/resources/css/Button.css
@@ -21,7 +21,7 @@
 
 .button:disabled {
     -fx-background-color: #FFFFFF;
-    -fx-border-color: #BBBBBB;
+    -fx-border-color: #CCCCCC;
     -fx-border-width: 1px;
     -fx-font-size: 10px;
     -fx-opacity: 0.5;
